# plugins

./: .gitignore  Plugins.cabal
src/: PartialEval.hs  Plugins.hs
test/: Main.hs  Makefile
