name:                Plugins
version:             0.1
synopsis:
description:
license:             BSD3
license-file:        LICENSE
author:              Ömer Sinan Ağacan
maintainer:          omeragacan@gmail.com
category:            GHC
build-type:          Simple
cabal-version:       >=1.10

-- source-repository head
--   type:                git
--   location:

library
  exposed-modules:     Plugins

  build-depends:
    base >= 4.8 && < 4.10,
    bytestring,
    ghc  >= 7.10 && < 8,
    mtl
    -- CoreDump >= 0.1.2.0

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
